# PhysicsSim

./: CMakeLists.txt
src/: main.cpp
src/util/linalgmath/: matrix.hpp
